project(example)

cmake_minimum_required(VERSION 2.8)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
elseif(NOT CMAKE_BUILD_TYPE MATCHES "^[Dd][Ee][Bb][Uu][Gg]")
	add_definitions(-DQT_NO_DEBUG_OUTPUT)
	set(CMAKE_BUILD_RELEASE TRUE)
else()
	set(CMAKE_BUILD_RELEASE FALSE)
endif()

option(BUILD_CLI "Build CLI endpoint" ON)
option(BUILD_GUI "Build GUI endpoint)" ON)
option(BUILD_SERVER "Build SERVER endpoint" ON)

set(CMAKE_AUTOMOC TRUE)
set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION "${BIN_INSTALL_DIR}")
set(ICONS_DIR "${${PROJECT_NAME}_SOURCE_DIR}/gui/images/icons")
set(LICENSE_FILE "docs/LICENSE.txt")
set(PROJECT_VERSION_MAJOR "0")
set(PROJECT_VERSION_MINOR "3")
set(PROJECT_VERSION_PATCH "0")
set(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
set(PROJECT_VENDOR "Bram Vogelaar")
set(PROJECT_COPYRIGHT_YEAR "2012")
set(PROJECT_DOMAIN_FIRST "attachmentgenie")
set(PROJECT_DOMAIN_SECOND "com")
set(PROJECT_DOMAIN "${PROJECT_DOMAIN_FIRST}.${PROJECT_DOMAIN_SECOND}")

if(APPLE)
	set(CMAKE_INSTALL_PREFIX "/Applications")
	set(EXECUTABLE "gui.app")
	set(BIN_INSTALL_DIR "${EXECUTABLE}/bin")
	set(DOC_INSTALL_DIR "${EXECUTABLE}/docs")
	set(INCLUDE_INSTALL_DIR "${EXECUTABLE}/include")
elseif(WIN32)
	set(BIN_INSTALL_DIR "bin")
	set(DOC_INSTALL_DIR "docs")
	set(EXECUTABLE "${BIN_INSTALL_DIR}/gui${CMAKE_EXECUTABLE_SUFFIX}")
	set(INCLUDE_INSTALL_DIR "include")
	install(FILES "${LICENSE_FILE}" DESTINATION ${DOC_INSTALL_DIR})
elseif(UNIX AND NOT APPLE)
	string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWERCASE)
	set(BIN_INSTALL_DIR "bin")
	set(DOC_INSTALL_DIR "share/doc/${PROJECT_NAME_LOWERCASE}/")
	set(EXECUTABLE "${BIN_INSTALL_DIR}/gui${CMAKE_EXECUTABLE_SUFFIX}")
	set(INCLUDE_INSTALL_DIR "include/${PROJECT_NAME}")
	install(FILES "${LICENSE_FILE}" DESTINATION ${DOC_INSTALL_DIR})
endif()

add_subdirectory(library)
if(BUILD_CLI)
	add_subdirectory(cli)
endif(BUILD_CLI)
if(BUILD_GUI)
	add_subdirectory(gui)
endif(BUILD_GUI)
if(BUILD_SERVER)
	add_subdirectory(server)
endif(BUILD_SERVER)

add_subdirectory(docs)
add_subdirectory(installer)